[package]
name = "blockchain_hello_world"
version = "0.1.0"
authors = ["PoorlyDefinedBehaviour <brunotj2015@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }